--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -7,7 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 10px;
 }
